[package]
name = "tokise"
version = "0.2.1"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>", "Elina <imelina@elina.website>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["yew", "futures", "async", "io"]
categories = ["asynchronous"]
description = "An asynchronous runtime compatible with WebAssembly and non-WebAssembly targets."
repository = "https://github.com/yewstack/tokise"
rust-version = "1.60.0"

[dependencies]
futures = { version = "0.3", default-features = false, features = [
  "std",
  "async-await",
] }
pin-project = "1.0.11"
pinned = "0.1.0"
once_cell = "1"

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
js-sys = { version = "0.3" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }

[target.'cfg(any(not(target_arch = "wasm32"), target_os = "wasi"))'.dependencies]
tokio = { version = "1.35", features = ["rt", "time"] }
tokio-stream = { version = "0.1.14", features = ["time"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
num_cpus = "1.13"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
